# wasm-image-hash

./: .gitignore  .prettierrc  LICENSE_MIT  README.md  package.json  test-node.js  tsconfig.json  vite.config.mjs
__mocks__/: wasm_phash.js
rust/: Cargo.toml
rust/src/: lib.rs
src/: getBuffer.ts  hashImg.ts  index.node.ts  index.ts
tests/: getBuffer.test.ts  hashImg.test.ts
typings/: dataToBuffer.d.ts  getBuffer.d.ts  hashImg.d.ts  index.d.ts  index.node.d.ts
